--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
     <scm>
         <connection>scm:git:git://github.com/PassKit/passkit-java-grpc-sdk.git</connection>
         <developerConnection>scm:git:ssh://github.com:PassKit/passkit-java-grpc-sdk.git</developerConnection>
-        <url>https://github.com/PassKit/passkit-java-grpc-sdk/tree/master</url>
-      <tag>sdk-1.1.1</tag>
+        <url>https://github.com/PassKit/passkit-java-grpc-sdk/tree/main</url>
+      <tag>v1.1.1</tag>
   </scm>
     <distributionManagement>
         <snapshotRepository>
