[maven-release-plugin] prepare release sdk-1.1.1

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     </developers>
     <scm>
         <connection>scm:git:git://github.com/PassKit/passkit-java-grpc-sdk.git</connection>
-        <developerConnection>scm:git:ssh://github.com:PassKit/passkit-java-grpc-sdk.git</developerConnection>
+        <developerConnection>scm:git:ssh://git@github.com/PassKit/passkit-java-grpc-sdk.git</developerConnection>
         <url>https://github.com/PassKit/passkit-java-grpc-sdk/tree/main</url>
         <tag>sdk-1.1.1</tag>
     </scm>
