--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <connection>scm:git:git://github.com/PassKit/passkit-java-grpc-sdk.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/PassKit/passkit-java-grpc-sdk.git</developerConnection>
         <url>https://github.com/PassKit/passkit-java-grpc-sdk/tree/main</url>
-        <tag>v1.1.60</tag>
+        <tag>v1.1.61-SNAPSHOT</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
